src/objects/BGBK__GlobalSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>BGBK__Enable_DRE_Logs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in DRE1; Set to TRUE during debugging to capture event logs. Note: This will cause performance slow down - it should not be on all of the time.</description>
        <label>Rules Engine Logs Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__Enable_DRE_Preview_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use to debug CPU Timeout errors.</description>
        <inlineHelpText>Use to debug CPU Timeout errors</inlineHelpText>
        <label>Rules Engine Preview Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__Exclude_Children__c</fullName>
        <description>Comma-delimited list of child relationship names to be excluded from DRE DataContext. For example, MUSW__Fees__r,CustomObjects__r (notice, use &apos;__r&apos;).</description>
        <inlineHelpText>Comma-delimited list of child relationship names to be excluded from DRE DataContext. For example, MUSW__Fees__r,CustomObjects__r (notice, use &apos;__r&apos;)</inlineHelpText>
        <label>Exclude Children</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Parents__c</fullName>
        <description>Used in DRE1 to define objects that need to trigger DRE events.</description>
        <inlineHelpText>List of comma-delimited custom objects that you can relate children records to. If no standard parent is found, objects as not-null lookup listed here first are selected as parents first.</inlineHelpText>
        <label>Additional Parents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Validate_DRE_Transforms__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If set to TRUE, the Rules Engine will validate transform values, such as repeat tags, and displays an error if there are problems. Leaving this setting unchecked causes errors to be skipped with no feedback.</description>
        <inlineHelpText>If checked Rules Engine will validate Transform values such as repeat tags, and displays an error if there are problems. Leaving this setting unchecked causes errors to be skipped with no feedback.</inlineHelpText>
        <label>Rules Engine Validate Transforms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__rulesEngineActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in DRE1; Set to FALSE to disable all DRE rules.</description>
        <label>Rules Engine Active</label>
        <type>Checkbox</type>
    </fields>
    <label>BGBK Global Settings</label>
</CustomObject>